@@ -274,10 +274,13 @@ extern "C" {
  */
 
 /* IPMI_NET_FN_FIRMWARE_RQ / IPMI_NET_FN_FIRMWARE_RS */
-#define IPMI_CMD_OEM_WISTRON_UPDATE_FIRMARE      0x01
-#define IPMI_CMD_OEM_WISTRON_GET_UPDATE_STATUS   0x02
-#define IPMI_CMD_OEM_WISTRON_COPY_IMAGE_DATA     0x03
-#define IPMI_CMD_OEM_WISTRON_USB_FIRMWARE_UPDATE 0x04
+#define IPMI_CMD_OEM_WISTRON_UPDATE_FIRMARE           0x01
+#define IPMI_CMD_OEM_WISTRON_GET_UPDATE_STATUS        0x02
+#define IPMI_CMD_OEM_WISTRON_COPY_IMAGE_DATA          0x03
+#define IPMI_CMD_OEM_WISTRON_USB_FIRMWARE_UPDATE      0x04
+#define IPMI_CMD_OEM_WISTRON_WRITE_PROPRIETARY_STRING 0x0B
+#define IPMI_CMD_OEM_WISTRON_READ_PROPRIETARY_STRING  0x0C
+#define IPMI_CMD_OEM_WISTRON_CLEAR_PROPRIETARY_STRING 0x0D
 
 /* IPMI_NET_FN_OEM_WISTRON_GENERIC_RQ / IPMI_NET_FN_OEM_WISTRON_GENERIC_RS */
 #define IPMI_CMD_OEM_WISTRON_RESERVED_EXTENDED_CONFIGURATION     0x01
