@@ -2557,6 +2557,12 @@ extern "C" {
 #define IPMI_OEM_WISTRON_PASSWORD_POLICY_DISABLE 0x00
 #define IPMI_OEM_WISTRON_PASSWORD_POLICY_ENABLE  0x01
 
+/* w/ IPMI_CMD_OEM_WISTRON_WRITE_PROPRIETARY_STRING
+ * and  IPMI_CMD_OEM_WISTRON_READ_PROPRIETARY_STRING
+ */
+#define IPMI_OEM_WISTRON_PROPRIETARY_STRING_MAX   80
+#define IPMI_OEM_WISTRON_PROPRIETARY_STRING_BLOCK 16
+
 #ifdef __cplusplus
 }
 #endif
